Fixed Food Spacing at 600px

--- a/src/index.css
+++ b/src/index.css
@@ -611,6 +611,11 @@ nav{
         top: -2%;
         left: 28%;
     }
+
+    #pie{
+        bottom: 30px;
+        padding-right: 20px;
+    }
 }
 
 /*
